TL-16066 / MDL-55364 mod_forum: fixed overlapping of columns at low resolutions
Reviewed-on: https://review.totaralms.com/17188
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/roots/less/totara/modules.less
+++ b/theme/roots/less/totara/modules.less
@@ -63,11 +63,15 @@ select {
         }
         .topic,
         .topic.starter,
-        .picture,
         .author,
         .replies,
         .lastpost {
             vertical-align: top;
+        }
+
+        .picture {
+            float: left;
+            margin-right: @padding-small-horizontal;
         }
     }
 }
